--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   
   <body>
-    <h1 class="text-blue-600 font-bold sm:text-red-500 md:text-amber-200">TailwindCSS</h1>
+    <h1 class="text-blue-600 font-bold sm:text-red-500 md:text-green-200">Perubahan dari branch baru</h1>
 
     <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3">
       <div class="h-8 bg-amber-200">Project</div>
